Updated button names

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     
     <select class="test-button" id="algorithm-select" title="Select the algorithm">
         <option>- select algorithm -</option>
-        <option>selection sort</option>
-        <option>bubble sort</option>
-        <option>insertion sort</option>
-        <option>quick sort</option>
-        <option>merge sort</option>
+        <option>Selection sort</option>
+        <option>Bubble sort</option>
+        <option>Insertion sort</option>
+        <option>Quick sort</option>
+        <option>Merge sort</option>
     </select>
     <input class="test-button" id="sorting_start_button" type="button" onclick="start_algorithm()" value="Start sorting!" />
-    <input id="shuffle-button" class="test-button" type="button" onclick="shuffle()" title="shuffleButton" value="shuffle test"/>
+    <input id="shuffle-button" class="test-button" type="button" onclick="shuffle()" title="shuffleButton" value="Shuffle"/>
 
     </div>
 
