--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_header.css">
 </head>
+
+<header>
+    <div class="title">SORTING ALGORITHMS VISUALIZATION</div>
+    <div class="option-container" id="header-options-container">
+    </div>
+</header>
+
 <body>
     
     <div id="blocks-container"></div>
